# goit_python_web_homework_08

./: README.md  pyproject.toml
part_1/: config.ini  models.py  seeds.py
part_2/: config.ini
