[tool.poetry]
name = "goit-python-web-homework-08"
version = "0.1.0"
description = ""
authors = ["Artem-Shabaltun <134101240+Artem-Shabaltun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
